Version 1.20.2 *
==================
- Added entry to clear the errors of the current project to the context menu of the line numbers.

Version 1.20.1
==================
- Fixed missing font update from changes in the Settings Dialog.
- Fixed Workspace cleanup Settings when Studio starts.
- Moved the list of files to be deleted to the details view when cleaning up workspace on startup.
- Dropped support for openSUSE Leap 15.6.
- Added support for Fedora 41 and Ubuntu 24.04 LTS.
- A GAMS Engine run from Studio can now select pool instances, too.
- A GAMS Engine pool instance can be scaled up and down from within Studio.

Version 1.20.0
==================
- Added fonts JetBrains Mono, Source Code Pro, Fira Code, and Cousine.
- Added a new `Workspace` tab to the settings, including the clean-up workspace configuration. Furthermore, the default settings value `Number of log backup files` has been changed from `3` to `0`.
- Added JetBrains Mono as default font for text editors. The font can be switched back to the default font in Settings (F7) in the "Editor & Log" tab.
- Fixed that the current project changes after using 'Save as...'.
- Fixed main-file indicator when switching to the same file used by another project.
- Fixed that the system projects were not shown when a project is in focus mode.
- Fixed crash when using filename for 'Save As...' that is already known by the Project Explorer.
- Fixed that Studio is stuck after opening the Model Dialog after upgrading to Qt 6.8.1.
- Upgraded to Qt 6.8.1

Version 1.19.5
==================
- Fixed missing "Set as Main File" in the Project Explorer context menu.

Version 1.19.4
==================
- Added fallback for data locations with special characters (non Latin-1 characters). Select a license location outside the user directory as a fallback.
- Fixed adding existing files to the project, although `Abort` was selected when getting a model from the model library.